--- a/Users.html
+++ b/Users.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Management</title>
+  <link rel="stylesheet" href="Users.css">
 </head>
 <body>
   <div id="divInfo" style="display: none; text-align: center; margin-bottom: 10px;"></div>
